--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,9 +1,17 @@
 /* Globals */
+
 a {
   text-decoration: none;
   color: black;
 }
-
+ul {
+  list-style-type: none;
+  padding: 0;
+  width: 100%;
+}
+header span {
+  color: white;
+}
 /* tools */
 .center {
   text-align: center;
@@ -11,6 +19,11 @@ a {
 .no-margin {
   margin: 0;
 }
+.separator {
+  border: solid 0.5px black;
+  margin: 20px;
+}
+/*  */
 #root {
   display: flex;
   flex-direction: column;
@@ -54,22 +67,75 @@ header button {
   opacity: 0.5;
   z-index: 2;
 }
+/* Cart */
 .cart {
   position: fixed;
   z-index: 2;
   background-color: rgb(238, 238, 232);
   box-shadow: #121418 2px 2px 10px 0px;
   color: black;
-  width: 30%;
+  width: 50%;
   right: 0;
-  top: 0;
+  top: 58px;
   bottom: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 10px;
+  overflow: scroll;
 }
-
+.cart-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 100px;
+  margin: 10px;
+  justify-content: space-between;
+}
+.cart-item-desc {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  flex-grow: 1;
+}
+.cart-item-image {
+  height: max-content;
+  width: 100px;
+  height: 100px;
+}
+.cart-item-image img {
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: multiply;
+  object-fit: contain;
+}
+.cart-item-data {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex-grow: 1;
+}
+.cart-item-remove {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: end;
+  height: 100%;
+  justify-self: end;
+}
+.cart-item-data-quantity {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+.cart-total {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+}
 .homepage {
   padding: 30px 0;
   display: flex;
@@ -171,5 +237,27 @@ header button {
   }
   .article-image-container {
     align-items: center;
+  }
+  /* cart */
+  .cart-item {
+    height: 200px;
+  }
+  .cart-item-desc {
+    padding-left: 10px;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .cart-item-data {
+    align-items: center;
+  }
+  /* homepage */
+  .preview {
+    width: 180px;
+    height: 180px;
+  }
+  .preview-image-container {
+    width: 180px;
+    height: 180px;
   }
 }
